login, signin Backend Complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
       <form action="/register" method="post">
         <input name="fullname" type="text" placeholder="Fullname" class="detail" />
         <input name="username" type="text" placeholder="Username" class="detail" />
-        <input name="username" type="email" placeholder="Email" class="detail" /><br />
+        <input name="email" type="email" placeholder="Email" class="detail" />
         <input name="password" type="password" placeholder="Password" class="detail" />
         <input type="submit" class="btn int" value="Register Account">
       </form>
