--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,7 @@
 
       <p class="signup-link">
         No account?
-        <a href="">Sign up</a>
+        <a href="/">Sign up</a>
       </p>
    </form>
 
