--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
         </svg>
       </span>
     </div>
-    <input value="Log in" class="submit" type="submit" />
+    <input value="Register" class="submit" type="submit" />
 
     <!-- <button class="submit" type="submit">
         Sign in
