--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,8 +17,8 @@
                 <p class="user-meta">BlshnoiYash1921 · he/him</p>
                 <p class="following-count">0 following</p>
                 <div class="profile-actions">
-                    <button class="share-btn">Share</button>
-                    <button class="edit-profile-btn">Edit profile</button>
+                    <a href="/logout" class="share-btn">Log out</a>
+                    <a class="edit-profile-btn">Edit profile</a>
                 </div>
             </div>
         </div>
